[package]
name = "piqc"
version = "0.0.0"
authors = ["Patrick Koenig <pkoenig10@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
enum_dispatch = "0.1.3"
enum-display-derive = "0.1.0"
lalrpop-util = "0.16.3"
regex = "1.1.2"

[dev-dependencies]
difference = "2.0.0"

[build-dependencies]
lalrpop = "0.16.3"
