[package]
name = "piqc"
version = "0.0.0"
authors = ["Patrick Koenig <pkoenig10@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
lalrpop-util = "0.16.3"
pest = "2.1.0"
pest_derive = "2.1.0"
regex = "1.1.2"

[dev-dependencies]
difference = "2.0.0"

[build-dependencies]
lalrpop = "0.16.3"
